--- a/data/ui/UbuntusorterWindow.ui
+++ b/data/ui/UbuntusorterWindow.ui
@@ -41,7 +41,7 @@
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <accelerator key="n" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="p" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                     <child>
@@ -161,7 +161,6 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="receives_default">True</property>
-                    <property name="relief">none</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
