--- a/data/ui/PreferencesUbuntusorterDialog.ui
+++ b/data/ui/PreferencesUbuntusorterDialog.ui
@@ -8,6 +8,12 @@
       <column type="gchararray"/>
     </columns>
   </object>
+  <object class="GtkListStore" id="liststore2">
+    <columns>
+      <!-- column-name ext_available -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="PreferencesUbuntusorterDialog" id="preferences_ubuntusorter_dialog">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Ubuntusorter Preferences</property>
@@ -101,17 +107,17 @@ toggle - actuall sort / preview sort (preview will just show what
               <object class="GtkGrid" id="grid1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_left">15</property>
+                <property name="row_spacing">12</property>
+                <property name="column_spacing">5</property>
                 <child>
                   <object class="GtkComboBoxText" id="folder_list">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="margin_right">5</property>
+                    <property name="margin_top">5</property>
                     <property name="entry_text_column">0</property>
                     <property name="id_column">1</property>
-                    <items>
-                      <item translatable="yes">Music</item>
-                      <item translatable="yes">Pictures</item>
-                      <item translatable="yes">Whatever Else</item>
-                    </items>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -126,6 +132,10 @@ toggle - actuall sort / preview sort (preview will just show what
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="receives_default">True</property>
+                    <property name="halign">center</property>
+                    <property name="valign">end</property>
+                    <property name="margin_left">10</property>
+                    <property name="margin_right">10</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -140,6 +150,10 @@ toggle - actuall sort / preview sort (preview will just show what
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="receives_default">True</property>
+                    <property name="halign">center</property>
+                    <property name="valign">end</property>
+                    <property name="margin_left">10</property>
+                    <property name="margin_right">10</property>
                   </object>
                   <packing>
                     <property name="left_attach">2</property>
@@ -147,21 +161,6 @@ toggle - actuall sort / preview sort (preview will just show what
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
                 </child>
                 <child>
                   <object class="GtkScrolledWindow" id="scrolledwindow1">
@@ -199,6 +198,88 @@ toggle - actuall sort / preview sort (preview will just show what
                     <property name="height">1</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkBox" id="box1">
+                    <property name="height_request">200</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="orientation">vertical</property>
+                    <property name="spacing">8</property>
+                    <child>
+                      <object class="GtkButton" id="add_ext_but">
+                        <property name="label" translatable="yes">Add Ext</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="receives_default">True</property>
+                        <property name="margin_top">62</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="del_ext_but">
+                        <property name="label" translatable="yes">Del Ext</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="receives_default">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">1</property>
+                    <property name="width">1</property>
+                    <property name="height">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkScrolledWindow" id="scrolledwindow2">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="shadow_type">in</property>
+                    <property name="min_content_width">150</property>
+                    <child>
+                      <object class="GtkTreeView" id="treeview2">
+                        <property name="height_request">150</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="has_tooltip">True</property>
+                        <property name="model">liststore2</property>
+                        <property name="headers_clickable">False</property>
+                        <property name="search_column">0</property>
+                        <property name="tooltip_column">0</property>
+                        <child internal-child="selection">
+                          <object class="GtkTreeSelection" id="treeview-selection"/>
+                        </child>
+                        <child>
+                          <object class="GtkTreeViewColumn" id="extension1">
+                            <property name="title" translatable="yes">extensions available</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="cellrenderertext2"/>
+                              <attributes>
+                                <attribute name="text">0</attribute>
+                              </attributes>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="left_attach">2</property>
+                    <property name="top_attach">1</property>
+                    <property name="width">1</property>
+                    <property name="height">1</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="position">1</property>
@@ -216,7 +297,7 @@ toggle - actuall sort / preview sort (preview will just show what
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label4">
+              <object class="GtkLabel" id="comming soon">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">Comming soon...</property>
